crates/carina-tui/tests/snapshots/golden_frames__golden_code_block.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_case(80, 24, \"markdown\", lines, false)"
---
size=80x24
Carina  markdown
────────────────────────────────────────────────────────────────────────────────
   rust
   pub fn ready() -> bool { true }

















────────────────────────────────────────────────────────────────────────────────
❯ Describe the change you want to make.
────────────────────────────────────────────────────────────────────────────────
styles:
(0, 0)..(6, 0) (Reset, Reset, BOLD)
(6, 0)..(16, 0) (Rgb(150, 160, 156), Reset, NONE)
(0, 1)..(80, 1) (Rgb(52, 65, 68), Reset, NONE)
(1, 2)..(7, 2) (Rgb(150, 160, 156), Reset, NONE)
(1, 3)..(3, 3) (Rgb(150, 160, 156), Reset, NONE)
(3, 3)..(34, 3) (Rgb(142, 219, 210), Reset, NONE)
(0, 21)..(80, 21) (Rgb(52, 65, 68), Reset, NONE)
(0, 22)..(39, 22) (Rgb(150, 160, 156), Reset, NONE)
(0, 23)..(80, 23) (Rgb(52, 65, 68), Reset, NONE)
