crates/carina-tui/tests/snapshots/golden_frames__golden_diff.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_case(80, 24, \"changes\",\nvec![Line::styled(\"- old value\",\nStyle::default().fg(deterministic_theme(carina_tui::glyphs::GlyphMode::Unicode).danger)),\nLine::styled(\"+ new value\",\nStyle::default().fg(deterministic_theme(carina_tui::glyphs::GlyphMode::Unicode).accent))],\nfalse)"
---
size=80x24
Carina  changes
────────────────────────────────────────────────────────────────────────────────
 - old value
 + new value

















────────────────────────────────────────────────────────────────────────────────
❯ Describe the change you want to make.
────────────────────────────────────────────────────────────────────────────────
styles:
(0, 0)..(6, 0) (Reset, Reset, BOLD)
(6, 0)..(15, 0) (Rgb(150, 160, 156), Reset, NONE)
(0, 1)..(80, 1) (Rgb(52, 65, 68), Reset, NONE)
(1, 2)..(12, 2) (Rgb(255, 124, 120), Reset, NONE)
(1, 3)..(12, 3) (Rgb(142, 219, 210), Reset, NONE)
(0, 21)..(80, 21) (Rgb(52, 65, 68), Reset, NONE)
(0, 22)..(39, 22) (Rgb(150, 160, 156), Reset, NONE)
(0, 23)..(80, 23) (Rgb(52, 65, 68), Reset, NONE)
