crates/carina-tui/tests/snapshots/golden_frames__golden_narrow_terminal_degradation.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_case(40, 10, \"项目 / claude-sonnet\",\nvec![Line::from(\"你好，这是一条需要换行的中文消息。\"),\nLine::from(\"A deliberately long fallback line.\")], false)"
---
size=40x10
Carina  项目 / claude-sonnet
────────────────────────────────────────
 你好，这是一条需要换行的中文消息。
 A deliberately long fallback line.



────────────────────────────────────────
❯ Describe the change you want to make.
────────────────────────────────────────
styles:
(0, 0)..(6, 0) (Reset, Reset, BOLD)
(6, 0)..(9, 0) (Rgb(150, 160, 156), Reset, NONE)
(10, 0)..(11, 0) (Rgb(150, 160, 156), Reset, NONE)
(12, 0)..(28, 0) (Rgb(150, 160, 156), Reset, NONE)
(0, 1)..(40, 1) (Rgb(52, 65, 68), Reset, NONE)
(0, 7)..(40, 7) (Rgb(52, 65, 68), Reset, NONE)
(0, 8)..(39, 8) (Rgb(150, 160, 156), Reset, NONE)
(0, 9)..(40, 9) (Rgb(52, 65, 68), Reset, NONE)
