crates/carina-tui/tests/snapshots/golden_frames__golden_overlay_open.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_case(80, 24, \"governance paused\",\nvec![Line::from(\"Waiting for approval\")], true)"
---
size=80x24
Carina  governance paused
────────────────────────────────────────────────────────────────────────────────
 Waiting for approval



                    ╭ Approval ────────────────────────────╮
                    │Allow shell command?                  │
                    │                                      │
                    │  [Allow once]  [Deny]                │
                    │                                      │
                    │                                      │
                    │                                      │
                    │                                      │
                    │                                      │
                    │                                      │
                    │                                      │
                    ╰──────────────────────────────────────╯



────────────────────────────────────────────────────────────────────────────────
❯ Describe the change you want to make.
────────────────────────────────────────────────────────────────────────────────
styles:
(0, 0)..(6, 0) (Reset, Reset, BOLD)
(6, 0)..(25, 0) (Rgb(150, 160, 156), Reset, NONE)
(0, 1)..(80, 1) (Rgb(52, 65, 68), Reset, NONE)
(20, 6)..(60, 6) (Rgb(232, 168, 95), Reset, NONE)
(20, 7)..(21, 7) (Rgb(232, 168, 95), Reset, NONE)
(59, 7)..(60, 7) (Rgb(232, 168, 95), Reset, NONE)
(20, 8)..(21, 8) (Rgb(232, 168, 95), Reset, NONE)
(59, 8)..(60, 8) (Rgb(232, 168, 95), Reset, NONE)
(20, 9)..(21, 9) (Rgb(232, 168, 95), Reset, NONE)
(59, 9)..(60, 9) (Rgb(232, 168, 95), Reset, NONE)
(20, 10)..(21, 10) (Rgb(232, 168, 95), Reset, NONE)
(59, 10)..(60, 10) (Rgb(232, 168, 95), Reset, NONE)
(20, 11)..(21, 11) (Rgb(232, 168, 95), Reset, NONE)
(59, 11)..(60, 11) (Rgb(232, 168, 95), Reset, NONE)
(20, 12)..(21, 12) (Rgb(232, 168, 95), Reset, NONE)
(59, 12)..(60, 12) (Rgb(232, 168, 95), Reset, NONE)
(20, 13)..(21, 13) (Rgb(232, 168, 95), Reset, NONE)
(59, 13)..(60, 13) (Rgb(232, 168, 95), Reset, NONE)
(20, 14)..(21, 14) (Rgb(232, 168, 95), Reset, NONE)
(59, 14)..(60, 14) (Rgb(232, 168, 95), Reset, NONE)
(20, 15)..(21, 15) (Rgb(232, 168, 95), Reset, NONE)
(59, 15)..(60, 15) (Rgb(232, 168, 95), Reset, NONE)
(20, 16)..(21, 16) (Rgb(232, 168, 95), Reset, NONE)
(59, 16)..(60, 16) (Rgb(232, 168, 95), Reset, NONE)
(20, 17)..(60, 17) (Rgb(232, 168, 95), Reset, NONE)
(0, 21)..(80, 21) (Rgb(52, 65, 68), Reset, NONE)
(0, 22)..(39, 22) (Rgb(150, 160, 156), Reset, NONE)
(0, 23)..(80, 23) (Rgb(52, 65, 68), Reset, NONE)
