crates/carina-tui/tests/snapshots/golden_frames__golden_single_turn.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_case(120, 40, \"carina / high\",\nvec![Line::from(vec![Span::styled(glyphs.prompt(), theme.transcript_user()),\nSpan::raw(\"Explain the renderer.\"),]), Line::from(\"\"),\nLine::from(vec![Span::styled(glyphs.role_prefix(),\ntheme.transcript_metadata()),\nSpan::raw(\"The transcript is retained and width-aware.\"),]),], false)"
---
size=120x40
Carina  carina / high
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ❯ Explain the renderer.

 • The transcript is retained and width-aware.
































────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯ Describe the change you want to make.
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
styles:
(0, 0)..(6, 0) (Reset, Reset, BOLD)
(6, 0)..(21, 0) (Rgb(150, 160, 156), Reset, NONE)
(0, 1)..(120, 1) (Rgb(52, 65, 68), Reset, NONE)
(1, 2)..(3, 2) (Rgb(195, 202, 198), Reset, BOLD)
(1, 4)..(3, 4) (Rgb(90, 101, 99), Reset, NONE)
(0, 37)..(120, 37) (Rgb(52, 65, 68), Reset, NONE)
(0, 38)..(39, 38) (Rgb(150, 160, 156), Reset, NONE)
(0, 39)..(120, 39) (Rgb(52, 65, 68), Reset, NONE)
