crates/carina-tui/tests/snapshots/golden_frames__golden_ultrawide_terminal_keeps_a_bounded_conversation_column.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: rendered
---
size=200x50
Carina  ultrawide workspace
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                        Conversation content remains a deliberate reading measure instead of an unbounded log line.












































────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯ Describe the change you want to make.
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
styles:
(0, 0)..(6, 0) (Reset, Reset, BOLD)
(6, 0)..(27, 0) (Rgb(150, 160, 156), Reset, NONE)
(0, 1)..(200, 1) (Rgb(52, 65, 68), Reset, NONE)
(0, 47)..(200, 47) (Rgb(52, 65, 68), Reset, NONE)
(0, 48)..(39, 48) (Rgb(150, 160, 156), Reset, NONE)
(0, 49)..(200, 49) (Rgb(52, 65, 68), Reset, NONE)
