crates/carina-tui/tests/snapshots/golden_frames__motion_reduced_static.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: render_reduced_motion_strip()
---
size=32x2
activity ⠋ ⠋ ⠋ ⠋
status   ⠋ ⠋ ⠋ ⠋
styles:
