crates/carina-tui/tests/snapshots/golden_frames__semantic_palette_dark_truecolor.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_palette(Theme::new(Polarity::Dark, ColorLevel::TrueColor))"
---
size=64x8
CARINA  primary  dim  muted  bright
focus  selected  link
+ added  - removed
fn semantic_theme() {}
pending  success  error
H1 H2 H3 H4 H5 H6


styles:
(0, 0)..(6, 0) (Rgb(168, 109, 121), Reset, NONE)
(17, 0)..(20, 0) (Rgb(90, 101, 99), Reset, NONE)
(22, 0)..(27, 0) (Rgb(150, 160, 156), Reset, NONE)
(29, 0)..(35, 0) (Rgb(195, 202, 198), Reset, NONE)
(0, 1)..(5, 1) (Rgb(142, 219, 210), Reset, BOLD)
(7, 1)..(15, 1) (Reset, Rgb(36, 61, 62), BOLD)
(17, 1)..(21, 1) (Rgb(120, 191, 242), Reset, UNDERLINED)
(0, 2)..(7, 2) (Rgb(133, 225, 170), Rgb(6, 56, 6), NONE)
(9, 2)..(18, 2) (Rgb(255, 156, 151), Rgb(66, 14, 20), NONE)
(0, 3)..(22, 3) (Rgb(220, 225, 222), Rgb(27, 32, 34), NONE)
(0, 4)..(7, 4) (Rgb(232, 168, 95), Reset, NONE)
(9, 4)..(16, 4) (Rgb(104, 210, 163), Reset, NONE)
(18, 4)..(23, 4) (Rgb(255, 124, 120), Reset, NONE)
(0, 5)..(3, 5) (Rgb(142, 219, 210), Reset, BOLD)
(3, 5)..(6, 5) (Reset, Reset, BOLD)
(6, 5)..(9, 5) (Rgb(195, 202, 198), Reset, BOLD)
(9, 5)..(12, 5) (Rgb(150, 160, 156), Reset, BOLD)
(12, 5)..(15, 5) (Rgb(150, 160, 156), Reset, ITALIC)
(15, 5)..(18, 5) (Rgb(90, 101, 99), Reset, ITALIC)
