crates/carina-tui/tests/snapshots/golden_frames__semantic_palette_depth_basic.snap
---
source: crates/carina-tui/tests/golden_frames.rs
expression: "render_palette(Theme::new(Polarity::Dark, level))"
---
size=64x8
CARINA  primary  dim  muted  bright
focus  selected  link
+ added  - removed
fn semantic_theme() {}
pending  success  error
H1 H2 H3 H4 H5 H6


styles:
(0, 0)..(6, 0) (Magenta, Reset, NONE)
(17, 0)..(20, 0) (Reset, Reset, DIM)
(22, 0)..(27, 0) (Reset, Reset, DIM)
(29, 0)..(35, 0) (Reset, Reset, DIM)
(0, 1)..(5, 1) (Cyan, Reset, BOLD)
(7, 1)..(15, 1) (Reset, Reset, BOLD | REVERSED)
(17, 1)..(21, 1) (Cyan, Reset, UNDERLINED)
(0, 2)..(7, 2) (Green, Reset, NONE)
(9, 2)..(18, 2) (Red, Reset, NONE)
(0, 4)..(7, 4) (Yellow, Reset, NONE)
(9, 4)..(16, 4) (Green, Reset, NONE)
(18, 4)..(23, 4) (Red, Reset, NONE)
(0, 5)..(3, 5) (Cyan, Reset, BOLD)
(3, 5)..(12, 5) (Reset, Reset, BOLD)
(12, 5)..(18, 5) (Reset, Reset, ITALIC)
